Criando funcao que faz o filtro para a excel menores

--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,3 @@
 # caminho pasta geral Excel
 DIR_EXCEL=C:\\SEU NOME\\SEU DIRETORIO
+DIR_EXCEL_FILTRADO=C:\\SEU NOME\\SEU DIRETORIO\\PASTA A FAZER UPLOAD FILTROS
