Finalizado as duas planilhas

--- a/.env_sample
+++ b/.env_sample
@@ -1,6 +1,7 @@
 # caminho pasta geral Excel
 DIR_EXCEL=C:\\SEU NOME\\SEU DIRETORIO
 DIR_EXCEL_FILTRADO=C:\\SEU NOME\\SEU DIRETORIO\\PASTA A FAZER UPLOAD FILTROS
+DIR_RESULTADOS=C:\\SEU NOME\\SEU DIRETORIO\\ARQUIVOS A FAZER UPLOAD E DOWNLOAD RESULTADOS
 
 POSTGRESQL_USER=
 POSTGRESQL_PASSWORD=
